--- a/src/assets/styles/iconfont.css
+++ b/src/assets/styles/iconfont.css
@@ -7,6 +7,18 @@
   url('./iconfont/iconfont.svg?t=1574316496564#iconfont') format('svg'); /* iOS 4.1- */
 }
 
+/* 线上 */
+@font-face {
+  font-family: 'iconfont';
+  /* project id 1518103 */
+  src: url('//at.alicdn.com/t/font_1518103_3v2rggi6l7s.eot');
+  src: url('//at.alicdn.com/t/font_1518103_3v2rggi6l7s.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_1518103_3v2rggi6l7s.woff2') format('woff2'),
+    url('//at.alicdn.com/t/font_1518103_3v2rggi6l7s.woff') format('woff'),
+    url('//at.alicdn.com/t/font_1518103_3v2rggi6l7s.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_1518103_3v2rggi6l7s.svg#iconfont') format('svg');
+}
+
 .iconfont {
   font-family: "iconfont" !important;
   font-style: normal;
